--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(${PROJECT_NAME}
     src/Display/Display.cpp
     src/Monster/Monster.cpp
     src/Monster/monster_moves.cpp
+    src/PersistentStorage/PersistentStorage.cpp
 )
 
 # Add arduino core library
