WIP: Battle class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,9 @@ add_executable(${PROJECT_NAME}
     src/Nunchuck/Nunchuck.cpp
     src/Display/Display.cpp
     src/Monster/Monster.cpp
-    src/Monster/monster_moves.cpp
+    src/Monster/Move.cpp
     src/PersistentStorage/PersistentStorage.cpp
+    src/Battle/Battle.cpp
 
 )
 
