--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ project("mic_kbs_game")
 # (Linux) `find src -name \*.c\*`
 add_executable(${PROJECT_NAME}
     src/main.cpp
+    src/SuperCounter/SuperCounter.cpp
     src/Nunchuck/Nunchuck.cpp
     src/Display/Display.cpp
     src/Monster/Monster.cpp
